--- a/application/application.html
+++ b/application/application.html
@@ -5,8 +5,8 @@
 <body>
   <h1>Goodbye cruel world</h1>
   <h3>Leave a goodbye message:</h3>
-  {{> awesome}}
-
+  {{! {{> awesome}}
+  <br/>
   {{> hello}}
 </body>
 
